[#50][CSP][GIN] Inclusión de tipo de enlace
Añadido el campo opcional tipo de enlace en los enlaces de grupo de investigación